@@ -2,6 +2,7 @@
 
 2022-03-03
  - Removed VCLoader.
+ - Added foreign keys to the DB tables of access and refresh token scopes.
 
 # version 0.65.1
 
